target/MiniGoParser.py
# Generated from main/minigo/parser/MiniGo.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'_'", "<INVALID>", "'if'", "'else'", 
                     "'for'", "'return'", "'func'", "'type'", "'struct'", 
                     "'interface'", "'const'", "'var'", "'continue'", "'break'", 
                     "'range'", "'int'", "'float'", "'string'", "'boolean'", 
                     "'nil'", "'true'", "'false'", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", "'!'", 
                     "':='", "'+='", "'-='", "'*='", "'/='", "'%='", "'='", 
                     "'.'", "'('", "')'", "'['", "']'", "'{'", "'}'", "','", 
                     "';'", "':'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'\n'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "BOOLLIT", "IF", "ELSE", 
                      "FOR", "RETURN", "FUNC", "TYPE", "STRUCT", "INTERFACE", 
                      "CONST", "VAR", "CONTINUE", "BREAK", "RANGE", "INT", 
                      "FLOAT", "STRING", "BOOLEAN", "NIL", "TRUE", "FALSE", 
                      "COMMENT", "LINE_COMMENT", "ADD", "SUB", "MUL", "DIV", 
                      "MOD", "EQUAL", "N_EQUAL", "LESS", "L_EQUAL", "GREATER", 
                      "G_EQUAL", "AND", "OR", "NOT", "ASSIGNMENT", "ADDASS", 
                      "SUBASS", "MULASS", "DIVASS", "MODASS", "ASSIGN", 
                      "DOT", "LP", "RP", "LSB", "RSB", "LB", "RB", "COMMA", 
                      "SEMI", "COLON", "INTLIT", "FLOATLIT", "STRINGLIT", 
                      "ID", "WS", "NL", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_decl = 2
    RULE_const_decl = 3
    RULE_var_decl = 4
    RULE_type_decl = 5
    RULE_func_decl = 6
    RULE_array_decl = 7
    RULE_scalar_decl = 8
    RULE_struct_var_decl = 9
    RULE_struct_decl = 10
    RULE_fieldnamelist = 11
    RULE_datatype = 12
    RULE_primitivetype = 13
    RULE_compositetype = 14
    RULE_structtype = 15
    RULE_interfacetype = 16
    RULE_arraytype = 17
    RULE_dimensions = 18
    RULE_interface_decl = 19
    RULE_methodlist = 20
    RULE_func = 21
    RULE_paramlist = 22
    RULE_paramprime = 23
    RULE_body = 24
    RULE_stmtlist = 25
    RULE_stmt = 26
    RULE_assignstmt = 27
    RULE_scalaassign = 28
    RULE_fieldassign = 29
    RULE_arrayassign = 30
    RULE_struct_instance = 31
    RULE_fieldaccess = 32
    RULE_arrayaccess = 33
    RULE_dimensions_stmt = 34
    RULE_returnstmt = 35
    RULE_method = 36
    RULE_receiver = 37
    RULE_ifstmt = 38
    RULE_if_clause = 39
    RULE_else_clause = 40
    RULE_elseif_clauselist = 41
    RULE_elseif_clause = 42
    RULE_forstmt = 43
    RULE_forbasic = 44
    RULE_foricu = 45
    RULE_initialization_clause = 46
    RULE_condition_clause = 47
    RULE_update_clause = 48
    RULE_forrange = 49
    RULE_breakstmt = 50
    RULE_continuestmt = 51
    RULE_callstmt = 52
    RULE_expr = 53
    RULE_expr1 = 54
    RULE_expr2 = 55
    RULE_expr3 = 56
    RULE_expr4 = 57
    RULE_expr5 = 58
    RULE_expr6 = 59
    RULE_subexpr = 60
    RULE_call = 61
    RULE_struct_call = 62
    RULE_func_call = 63
    RULE_argumentlist = 64
    RULE_argumentprime = 65
    RULE_literals = 66
    RULE_structliteral = 67
    RULE_fieldvaluelist = 68
    RULE_fieldvalueprime = 69
    RULE_arrayliteral = 70
    RULE_elementlist = 71
    RULE_element = 72
    RULE_primitive_literals = 73

    ruleNames =  [ "program", "decls", "decl", "const_decl", "var_decl", 
                   "type_decl", "func_decl", "array_decl", "scalar_decl", 
                   "struct_var_decl", "struct_decl", "fieldnamelist", "datatype", 
                   "primitivetype", "compositetype", "structtype", "interfacetype", 
                   "arraytype", "dimensions", "interface_decl", "methodlist", 
                   "func", "paramlist", "paramprime", "body", "stmtlist", 
                   "stmt", "assignstmt", "scalaassign", "fieldassign", "arrayassign", 
                   "struct_instance", "fieldaccess", "arrayaccess", "dimensions_stmt", 
                   "returnstmt", "method", "receiver", "ifstmt", "if_clause", 
                   "else_clause", "elseif_clauselist", "elseif_clause", 
                   "forstmt", "forbasic", "foricu", "initialization_clause", 
                   "condition_clause", "update_clause", "forrange", "breakstmt", 
                   "continuestmt", "callstmt", "expr", "expr1", "expr2", 
                   "expr3", "expr4", "expr5", "expr6", "subexpr", "call", 
                   "struct_call", "func_call", "argumentlist", "argumentprime", 
                   "literals", "structliteral", "fieldvaluelist", "fieldvalueprime", 
                   "arrayliteral", "elementlist", "element", "primitive_literals" ]

    EOF = Token.EOF
    T__0=1
    BOOLLIT=2
    IF=3
    ELSE=4
    FOR=5
    RETURN=6
    FUNC=7
    TYPE=8
    STRUCT=9
    INTERFACE=10
    CONST=11
    VAR=12
    CONTINUE=13
    BREAK=14
    RANGE=15
    INT=16
    FLOAT=17
    STRING=18
    BOOLEAN=19
    NIL=20
    TRUE=21
    FALSE=22
    COMMENT=23
    LINE_COMMENT=24
    ADD=25
    SUB=26
    MUL=27
    DIV=28
    MOD=29
    EQUAL=30
    N_EQUAL=31
    LESS=32
    L_EQUAL=33
    GREATER=34
    G_EQUAL=35
    AND=36
    OR=37
    NOT=38
    ASSIGNMENT=39
    ADDASS=40
    SUBASS=41
    MULASS=42
    DIVASS=43
    MODASS=44
    ASSIGN=45
    DOT=46
    LP=47
    RP=48
    LSB=49
    RSB=50
    LB=51
    RB=52
    COMMA=53
    SEMI=54
    COLON=55
    INTLIT=56
    FLOATLIT=57
    STRINGLIT=58
    ID=59
    WS=60
    NL=61
    UNCLOSE_STRING=62
    ILLEGAL_ESCAPE=63
    ERROR_CHAR=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decls(self):
            return self.getTypedRuleContext(MiniGoParser.DeclsContext,0)


        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.decls()
            self.state = 149
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MiniGoParser.DeclContext,0)


        def decls(self):
            return self.getTypedRuleContext(MiniGoParser.DeclsContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecls" ):
                return visitor.visitDecls(self)
            else:
                return visitor.visitChildren(self)




    def decls(self):

        localctx = MiniGoParser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniGoParser.FUNC, MiniGoParser.TYPE, MiniGoParser.CONST, MiniGoParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.decl()
                self.state = 152
                self.decls()
                pass
            elif token in [MiniGoParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(MiniGoParser.SEMI, 0)

        def NL(self):
            return self.getToken(MiniGoParser.NL, 0)

        def const_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Const_declContext,0)


        def var_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Var_declContext,0)


        def type_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Type_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Func_declContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MiniGoParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniGoParser.CONST]:
                self.state = 157
                self.const_decl()
                pass
            elif token in [MiniGoParser.VAR]:
                self.state = 158
                self.var_decl()
                pass
            elif token in [MiniGoParser.TYPE]:
                self.state = 159
                self.type_decl()
                pass
            elif token in [MiniGoParser.FUNC]:
                self.state = 160
                self.func_decl()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 163
            _la = self._input.LA(1)
            if not(_la==MiniGoParser.SEMI or _la==MiniGoParser.NL):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(MiniGoParser.CONST, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniGoParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_const_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst_decl" ):
                return visitor.visitConst_decl(self)
            else:
                return visitor.visitChildren(self)




    def const_decl(self):

        localctx = MiniGoParser.Const_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_const_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(MiniGoParser.CONST)
            self.state = 166
            self.match(MiniGoParser.ID)
            self.state = 167
            self.match(MiniGoParser.ASSIGN)
            self.state = 168
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scalar_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Scalar_declContext,0)


        def array_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Array_declContext,0)


        def struct_var_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_var_declContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = MiniGoParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_decl)
        try:
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 170
                self.scalar_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 171
                self.array_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 172
                self.struct_var_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_declContext,0)


        def interface_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Interface_declContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_type_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_decl" ):
                return visitor.visitType_decl(self)
            else:
                return visitor.visitChildren(self)




    def type_decl(self):

        localctx = MiniGoParser.Type_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type_decl)
        try:
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.struct_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.interface_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func(self):
            return self.getTypedRuleContext(MiniGoParser.FuncContext,0)


        def method(self):
            return self.getTypedRuleContext(MiniGoParser.MethodContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_func_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = MiniGoParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func_decl)
        try:
            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 179
                self.func()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 180
                self.method()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def arraytype(self):
            return self.getTypedRuleContext(MiniGoParser.ArraytypeContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_array_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_decl" ):
                return visitor.visitArray_decl(self)
            else:
                return visitor.visitChildren(self)




    def array_decl(self):

        localctx = MiniGoParser.Array_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_array_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.match(MiniGoParser.VAR)
            self.state = 184
            self.match(MiniGoParser.ID)
            self.state = 185
            self.arraytype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Scalar_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def primitivetype(self):
            return self.getTypedRuleContext(MiniGoParser.PrimitivetypeContext,0)


        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniGoParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_scalar_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScalar_decl" ):
                return visitor.visitScalar_decl(self)
            else:
                return visitor.visitChildren(self)




    def scalar_decl(self):

        localctx = MiniGoParser.Scalar_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_scalar_decl)
        self._la = 0 # Token type
        try:
            self.state = 198
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 187
                self.match(MiniGoParser.VAR)
                self.state = 188
                self.match(MiniGoParser.ID)
                self.state = 189
                self.primitivetype()
                self.state = 192
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MiniGoParser.ASSIGN:
                    self.state = 190
                    self.match(MiniGoParser.ASSIGN)
                    self.state = 191
                    self.expr(0)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 194
                self.match(MiniGoParser.VAR)
                self.state = 195
                self.match(MiniGoParser.ID)
                self.state = 196
                self.match(MiniGoParser.ASSIGN)
                self.state = 197
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def structtype(self):
            return self.getTypedRuleContext(MiniGoParser.StructtypeContext,0)


        def ASSIGNMENT(self):
            return self.getToken(MiniGoParser.ASSIGNMENT, 0)

        def structliteral(self):
            return self.getTypedRuleContext(MiniGoParser.StructliteralContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_struct_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct_var_decl" ):
                return visitor.visitStruct_var_decl(self)
            else:
                return visitor.visitChildren(self)




    def struct_var_decl(self):

        localctx = MiniGoParser.Struct_var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_struct_var_decl)
        self._la = 0 # Token type
        try:
            self.state = 211
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 200
                self.match(MiniGoParser.VAR)
                self.state = 201
                self.match(MiniGoParser.ID)
                self.state = 202
                self.structtype()
                self.state = 205
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MiniGoParser.ASSIGNMENT:
                    self.state = 203
                    self.match(MiniGoParser.ASSIGNMENT)
                    self.state = 204
                    self.structliteral()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 207
                self.match(MiniGoParser.VAR)
                self.state = 208
                self.match(MiniGoParser.ID)
                self.state = 209
                self.match(MiniGoParser.ASSIGNMENT)
                self.state = 210
                self.structliteral()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(MiniGoParser.TYPE, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def STRUCT(self):
            return self.getToken(MiniGoParser.STRUCT, 0)

        def LB(self):
            return self.getToken(MiniGoParser.LB, 0)

        def fieldnamelist(self):
            return self.getTypedRuleContext(MiniGoParser.FieldnamelistContext,0)


        def RB(self):
            return self.getToken(MiniGoParser.RB, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_struct_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct_decl" ):
                return visitor.visitStruct_decl(self)
            else:
                return visitor.visitChildren(self)




    def struct_decl(self):
